# sonic-interface-libraries

./: .gitignore  .kde-ci.yml  CMakeLists.txt  KF5PlasmaMacros.cmake  PlasmaMacros.cmake  README.md  project.config
autotests/: CMakeLists.txt  coronatest.cpp  dialogloadtest.cpp  dialogloadtest.h  dialognativetest.cpp  dialogstatetest.cpp  dialogtest.cpp  iconitemtest.cpp  pluginloadertest.cpp  sharedqmlenginetest.cpp  themetest.cpp  themetest.h
autotests/applet/: CMakeLists.txt  applettest.cpp
autotests/declarativetests/: CMakeLists.txt  bug485688.qml  components.qml  qmltest.cpp
examples/applets/: CMakeLists.txt
examples/testcontainmentactionsplugin/: CMakeLists.txt  plasma-containmentactions-test.json  test.cpp
src/: CMakeLists.txt
src/declarativeimports/: CMakeLists.txt
src/declarativeimports/plasmaextracomponents/: CMakeLists.txt  TODO  fallbackcomponent.h  plasmaextracomponentsplugin.cpp  plotter.cpp  plotter.h  qmenu.cpp  qmenu.h  qmenuitem.cpp
src/declarativeimports/plasmaextracomponents/qml/: .Highlight.qml.swn  ActionTextField.qml  BasicPlasmoidHeading.qml  DescriptiveLabel.qml  ExpandableListItem.qml  FullRepresentation.qml  Heading.qml  Highlight.qml  KeyboardFocusablePlasmoid.qml  ListItem.qml  ListSectionHeader.qml  ModelContextMenu.qml  PageRow.qml  Paragraph.qml  PasswordField.qml  PlaceholderMessage.qml  PlasmoidHeading.qml  Plotter.qml  Representation.qml  SearchField.qml  SegmentedProgressBar.qml  ShadowedLabel.qml  Title.qml  qmldir
src/declarativeimports/plasmaextracomponents/qml/private/: plotterpainter.js
src/declarativeimports/plasmoid/: CMakeLists.txt  plasmoidplugin.cpp
src/desktoptheme/: CMakeLists.txt
src/packagestructures/: CMakeLists.txt
src/plasma/: CMakeLists.txt  applet.cpp  applet.h  config-plasma.h.cmake  containment.cpp  containment.h  containmentactions.cpp  containmentactions.h  corona.cpp  corona.h  dataengine.h  framesvg.cpp  framesvg.h  package.cpp  package.h  packagestructure.cpp  plasma-index.qdoc  plasma.h  plasma.qdoc  plasma.qdocconf  pluginloader.cpp  pluginloader.h  service.h  servicejob.h  svg.cpp  svg.h  theme.cpp  theme.h
src/plasmaquick/: CMakeLists.txt  KF6PlasmaQuickConfig.cmake.in  appletcontext.cpp  appletcontext_p.h  appletpopup.cpp  appletpopup.h  appletquickitem.cpp  appletquickitem.h  configcategory_p.cpp  configcategory_p.h  configmodel.cpp  configmodel.h  configview.cpp  configview.h  containmentview.cpp  declarativewindow.cpp  declarativewindow.h  dialog.cpp  dialog.h  dialogbackground_p.cpp  edgeeventforwarder.cpp  edgeeventforwarder.h  packageurlinterceptor.cpp  plasmashellwaylandintegration.cpp  plasmashellwaylandintegration.h  plasmawindow.cpp  plasmawindow.h  plasmoidattached_p.cpp  plasmoidattached_p.h  popupplasmawindow.cpp  popupplasmawindow.h  sharedqmlengine.cpp  sharedqmlengine.h  transientplacementhint.cpp  transientplacementhint_p.h  view.cpp  waylandintegration.cpp  waylandintegration_p.h  windowresizehandler.cpp  windowresizehandler.h
src/shell/: CMakeLists.txt  desktopcorona.cpp  desktopcorona.h  main.cpp  panelview.cpp  (+2 more)
tests/: colorcontext.qml  dialog_sizeMoreThanMin.qml  frames.qml  selected_svg.qml  shadows.qml  testborders.qml
(+254 files in other folders)
